<resources>
    <string name="app_name">SnapTrack</string>
    <string name="home_name">Home</string>
    <string name="create_activity_name">Create Activity</string>
    <string name="dataanalytics_name">Data Analytics</string>
    <string name="me_name">Me</string>
    <string name="pair_an_nfc_name">Pair an NFC</string>
    <string name="pair_an_nfc_screen_pop_up">Approach an NFC Tag \n Pair an NFC"</string>
    <string name="name_of_activity">Name of Activity*</string>
    <string name="short_name">Short Name</string>
    <string name="labels">Labels for filtering (E.g Work,Life)</string>
    <string name="unique_colour">Unique Hex Colour (E.g #293E53)*</string>
</resources>