<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CreateActivity">

    <EditText
        android:id="@+id/editNameOfActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_activity"
        android:inputType="textCapWords"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editShortName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/short_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/labels"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/editColour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unique_colour"
        android:importantForAutofill="no"
        android:inputType="text" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonPairAnNFC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/pair_an_nfc_name"/>

    <Button
        android:id="@+id/buttonToday_CA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/home_name"/>


    <Button
        android:id="@+id/buttonDataAnalytics_CA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/dataanalytics_name"/>

    <Button
        android:id="@+id/buttonMe_CA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/me_name" />

</LinearLayout>